--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -3,6 +3,7 @@
     <ul>
       <li><a href="#!user">User Home</a></li>
       <li><a href="#!info">Info Page</a></li>
+      <li><a ng-click="vm.userService.logout()">Log Out</a></li>
     </ul>
   </div>
 </div>
