--- a/server/public/views/templates/register.html
+++ b/server/public/views/templates/register.html
@@ -4,11 +4,35 @@
   <form ng-submit="vm.registerUser()">
     <div>
         <label for="username">Username:</label>
-        <input type="text" ng-model="vm.user.username" />
+        <input type="text" ng-model="vm.user.username" placeholder="Username" />
     </div>
     <div>
         <label for="password">Password:</label>
-        <input type="password" ng-model="vm.user.password" />
+        <input type="text" ng-model="vm.user.password" placeholder="Password" />
+    </div>
+    <div>
+        <label for="password">First:</label>
+        <input type="text" ng-model="vm.user.first" placeholder="First Name" />
+    </div>
+    <div>
+        <label for="password">Last:</label>
+        <input type="text" ng-model="vm.user.last" placeholder="Last Name" />
+    </div>
+    <div>
+        <label for="password">Rank:</label>
+        <input type="text" ng-model="vm.user.rank" placeholder="ex: MAJ" />
+    </div>
+    <div>
+        <label for="password">Battalion:</label>
+        <input type="text" ng-model="vm.user.battalion" placeholder="ex: 334th BEB" />
+    </div>
+    <div>
+        <label for="password">Company:</label>
+        <input type="text" ng-model="vm.user.company" placeholder="ex: A co" />
+    </div>
+    <div>
+        <label for="password">Platoon:</label>
+        <input type="text" ng-model="vm.user.platoon" placeholder="ex: A&O" />
     </div>
     <input class="btn btn-default" type="submit" name="submit" value="Register" />
     <a href="#!home">Cancel</a>
