--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -2,6 +2,7 @@
   <div class="container">
     <ul>
       <li><a href="#!user">User Home</a></li>
+      <li><a href="#!soldier">Soldiers</a></li>
       <li><a href="#!info">Info Page</a></li>
       <li><a ng-click="vm.userService.logout()">Log Out</a></li>
     </ul>
