DOM mirrors database

--- a/server/public/views/templates/soldier.html
+++ b/server/public/views/templates/soldier.html
@@ -4,7 +4,21 @@
         <thead>
             <tr>
                 <th ng-hide="newSoldierShowHide"><button ng-click="newSoldierShowHide = true">Add Soldier</button>Name</th>
-                <th ng-show="newSoldierShowHide"><button ng-click="vm.submitSoldierController()">Submit Soldier</button><input ng-model="vm.newSoldierInfo.rank" placeholder="Rank" type="text"><input ng-model="vm.newSoldierInfo.last" placeholder="Last Name" type="text"><input ng-model="vm.newSoldierInfo.first" placeholder="First Name" type="text"></th>
+                <th ng-show="newSoldierShowHide">
+                    <button ng-click="vm.submitSoldierController(); newSoldierShowHide = false">Submit Soldier</button>
+                    <select ng-model="vm.newSoldierInfo.rank">
+                        <option>PVT</option>
+                        <option>PV2</option>
+                        <option>PFC</option>
+                        <option>SPC</option>
+                        <option>CPL</option>
+                        <option>SGT</option>
+                        <option>SSG</option>
+                        <option>SFC</option>
+                    </select>
+                    <input ng-model="vm.newSoldierInfo.last" placeholder="Last Name" type="text">
+                    <input ng-model="vm.newSoldierInfo.first" placeholder="First Name" type="text">
+                </th>
                 <th ng-hide="newSoldierShowHide">Eval</th>
                 <th ng-show="newSoldierShowHide"><input ng-model="vm.newSoldierInfo.eval" placeholder="Eval Date" type="text"></th>
                 <th ng-hide="newSoldierShowHide">ETS</th>
@@ -12,11 +26,8 @@
                 <th ng-hide="newSoldierShowHide">APFT</th>
                 <th ng-show="newSoldierShowHide"><input ng-model="vm.newSoldierInfo.apft" placeholder="APFT: Pass/Fail" type="text"></th>
             </tr>
-            <tr ng-show="newSoldierShowHide">
-                <td>{{vm.newSoldierInfo.rank}} {{vm.newSoldierInfo.last}}, {{vm.newSoldierInfo.first}}</td>
-            </tr>
         </thead>
-        <tbody ng-repeat="soldier in vm.soldierRoster">
+        <tbody ng-repeat="soldier in vm.soldierRoster.list">
             <tr>
                 <td>{{soldier.rank}} {{soldier.last}}, {{soldier.first}}</td>
                 <!-- <td ng-hide=""><input value={{soldier.rank}} type="text"><input value={{soldier.last}} type="text"><input value={{soldier.first}} type="text"></td> -->
