edit and delete buttons hide/show upon mouse hover

--- a/server/public/views/templates/soldier.html
+++ b/server/public/views/templates/soldier.html
@@ -36,12 +36,16 @@
             </tr>
         </thead>
         <tbody ng-repeat="soldier in vm.soldierRoster.list">
-            <tr ng-click="vm.showHideTableData[$index].show = !vm.showHideTableData[$index].show">
+            <tr ng-click="vm.showHideTableData[$index].show = !vm.showHideTableData[$index].show" ng-mouseover="vm.soldierButtonsShowHide[$index].show = true" ng-mouseleave="vm.soldierButtonsShowHide[$index].show = false">
                 <td>{{soldier.rank}} {{soldier.last}}, {{soldier.first}}</td>
                 <!-- <td ng-hide=""><input value={{soldier.rank}} type="text"><input value={{soldier.last}} type="text"><input value={{soldier.first}} type="text"></td> -->
                 <td>{{soldier.eval | date: short}}</td>
                 <td>{{soldier.ets | date: short}}</td>
                 <td>{{soldier.apft}}</td>
+                <td ng-if="vm.soldierButtonsShowHide[$index].show">
+                    <button>Edit</button>
+                    <button>Delete</button>
+                </td>
             </tr>
             <tr ng-if="vm.showHideTableData[$index].show">
                 <td>Document</td>
