--- a/server/public/views/templates/register.html
+++ b/server/public/views/templates/register.html
@@ -27,9 +27,9 @@
         <input type="text" ng-model="vm.user.unit" placeholder="ex: 334th BEB Aco A&O" />
     </div> -->
     <div>
-        <select ng-model="vm.user.unit">
+        <!-- <select ng-model="vm.user.unit">
             <option ng-repeat="unit as vm.unitObject" value={{unit.id}}>{{unit.unit}}</option>
-        </select>
+        </select> -->
     </div>
     <input class="btn btn-default" type="submit" name="submit" value="Register" />
     <a href="#!home">Cancel</a>
