Filestack places in the DB properly and affects the DOM

--- a/server/public/views/templates/soldier.html
+++ b/server/public/views/templates/soldier.html
@@ -25,10 +25,10 @@
                     <input ng-model="vm.newSoldierInfo.last" placeholder="Last Name" type="text">
                     <input ng-model="vm.newSoldierInfo.first" placeholder="First Name" type="text">
                     <th ng-show="newSoldierShowHide">
-                        <input ng-model="vm.newSoldierInfo.ets" placeholder="ETS Date" type="text">
+                        <input ng-model="vm.newSoldierInfo.ets" placeholder="ETS Date" type="date">
                     </th>
                 </th>
-                <th><input ng-model="vm.newSoldierInfo.eval" placeholder="Eval Date" type="text"></th>
+                <th><input ng-model="vm.newSoldierInfo.eval" placeholder="Eval Date" type="date"></th>
                 <th>
                     <select ng-model="vm.newSoldierInfo.apft">
                         <option>Pass</option>
