--- a/server/public/views/templates/schedule.html
+++ b/server/public/views/templates/schedule.html
@@ -1,49 +1,50 @@
 <div ng-include="'views/partials/nav.html'"></div>
 <div class="container">
     <div class="row">
-        <div class="">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">Date</div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">Location</div>
+        <div class="col-xs-12 col-sm-12 col-md-12 col-ld-12">
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 control">Date</div>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 control">Location</div>
         </div>
     </div>
     <div class="row">
-        <div>
-            <div ng-repeat="date in vm.datesDisplay.list" class="">
-                <!-- Dates Repeat in Tier 1 -->
-                <div class="redDiv">
+        <div ng-repeat="date in vm.datesDisplay.list" class="yellowDiv">
+            <!-- Dates Repeat in Tier 1 -->
+            <div class="redDiv">
+                <div ng-click="vm.toggleDateSubform(date)">
                     <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">{{date.date}}</div>
-                    <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">{{date.location}}</div><br>
-                </div>
-                <!-- Dates Stop in Tier 1 -->
-                <!-- Documents Card Repeat in Tier 2 -->
-                <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 greenDiv">
-                    <div class="">General Docs</div>
-                    <div ng-repeat="doc in date.docs">
-                        <div class="">{{doc.name}}</div>
-                    </div>
-                </div> <!-- Documents Card Stop in Tier 2 -->
-                <!-- Tasks Card Repeat in Tier 2 -->
-                <div class="col-xs-10 col-sm-10 col-md-10 col-ld-10 yellowDiv">
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">Tasks</div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">OIC/NCOIC</div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">Location</div><br>
-                    <div ng-repeat="task in date.tasks">
-                        <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">{{task.name}}</div>
-                        <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">{{task.command}}</div>
-                        <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">{{task.location}}</div>
-                        <!-- Task Documents Card Repeat in Tier 2 -->
-                        <div class="purpleDiv">
-                            <div class="">Task Documents</div><br>
-                            <div class="blueDiv">
-                                <div ng-repeat="doc in task.docs" class="control">
-                                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6 control">{{doc.name}}</div>
-                                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6 control"><button>Delete</button></div>
-                                </div>
-                            </div>
-                        </div> <!-- Task Documents Card End -->
-                    </div> <!-- Tasks Repeat End -->
-                </div> <!-- Tasks Card End -->
+                    <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">{{date.location}}</div>
+                </div><br>
             </div>
+            <!-- Dates Stop in Tier 1 -->
+            <!-- Documents Card Repeat in Tier 2 -->
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 greenDiv">
+                <div class="">General Docs</div>
+                <div ng-repeat="doc in date.docs">
+                    <div class="">{{doc.name}}</div>
+                </div>
+            </div> <!-- Documents Card Stop in Tier 2 -->
+            <!-- Tasks Card Repeat in Tier 2 -->
+            <div class="col-xs-10 col-sm-10 col-md-10 col-ld-10 blueDiv">
+                <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">Tasks</div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">OIC/NCOIC</div>
+                <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">Location</div><br>
+                <div ng-repeat="task in date.tasks">
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">{{task.name}}</div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">{{task.command}}</div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">{{task.location}}</div>
+                    <!-- Task Documents Card Repeat in Tier 2 -->
+                    <div class="">
+                        <div class="">Task Documents</div><br>
+                        <div class="">
+                            <div ng-repeat="doc in task.docs" class="control">
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6 control">{{doc.name}}</div>
+                                <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6 control"><button>Delete</button></div>
+                            </div>
+                        </div>
+                    </div> <!-- Task Documents Card End -->
+                </div> <!-- Tasks Repeat End -->
+            </div> <!-- Tasks Card End -->
+            <p class="devDot">.</p>
         </div>
     </div>
 </div>
