--- a/server/public/views/templates/user.html
+++ b/server/public/views/templates/user.html
@@ -1,6 +1,6 @@
 <div ng-include="'views/partials/nav.html'"></div>
 <div class="container">
 
-    <h1 id="welcome" class="lead">Welcome, {{vm.userObject.rank}} {{vm.userObject.last}}!</h1>
+    <h1 id="welcome" class="lead">Welcome, {{vm.userService.userObject.rank}} {{vm.userService.userObject.last}}!</h1>
     <!-- <button class="btn btn-default" ng-click="vm.userService.logout()">Log Out</button> -->
 </div>
