--- a/server/public/views/partials/header.html
+++ b/server/public/views/partials/header.html
@@ -1,5 +1,17 @@
 <div class="instructions">
     <div class="container">
-        <h1 class="lead">Solo Project</h1>
+        <h1 class="lead">S.P.L.A.T.</h1>
     </div>
 </div>
+<!-- <div class="navbar">
+    <div class="container">
+      <ul class="navBar">
+        <li class="navButton"><a href="#!user">User Home</a></li>
+        <li class="navButton"><a href="#!schedule">Schedule</a></li>
+        <li class="navButton"><a href="#!soldier">Soldiers</a></li>
+        <li class="navButton"><a href="#!vehicle">Vehicles</a></li>
+        <li class="navButton"><a href="#!info">Info Page</a></li>
+        <li class="navButton" style="float: right"><a ng-click="vm.userService.logout()">Log Out</a></li>
+      </ul>
+    </div>
+  </div> -->
