--- a/server/public/views/partials/nav.html
+++ b/server/public/views/partials/nav.html
@@ -6,7 +6,7 @@
       <li class="navButton"><a href="#!soldier">Soldiers</a></li>
       <li class="navButton"><a href="#!vehicle">Vehicles</a></li>
       <li class="navButton"><a href="#!info">Info Page</a></li>
-      <li class="navButton"><a ng-click="vm.userService.logout()">Log Out</a></li>
+      <li class="navButton" style="float: right"><a ng-click="vm.userService.logout()">Log Out</a></li>
     </ul>
   </div>
 </div>
