--- a/server/public/views/templates/schedule.html
+++ b/server/public/views/templates/schedule.html
@@ -1,50 +1,68 @@
 <div ng-include="'views/partials/nav.html'"></div>
 <div class="container">
     <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 col-ld-12">
-            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 control">Date</div>
-            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 control">Location</div>
+        <div class="">
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl">Date</div>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl">Location</div>
+            <div class="col-xs-8 col-sm-8 col-md-8 col-ld-8"><button ng-click="vm.dateInputShow()" class="btn-xs btn-success">Add</button></div>
+        </div>
+        <div ng-if="vm.addInputs">
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl"><input type="text"></div>
+            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 divHeightControl"><input type="text"></div>
+            <div class="col-xs-8 col-sm-8 col-md-8 col-ld-8"><button class="btn-xs btn-success">Finish</button></div>
         </div>
     </div>
     <div class="row">
-        <div ng-repeat="date in vm.datesDisplay.list" class="yellowDiv">
+        <div ng-repeat="date in vm.datesDisplay.list" class="greySeparator">
             <!-- Dates Repeat in Tier 1 -->
-            <div class="redDiv">
-                <div ng-click="vm.toggleDateSubform(date)">
+            <div  ng-click="vm.toggleDateSubform(date)" class="hoverDiv divHeightControl textAlign5">
+                <div>
                     <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">{{date.date}}</div>
                     <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">{{date.location}}</div>
                 </div><br>
             </div>
             <!-- Dates Stop in Tier 1 -->
             <!-- Documents Card Repeat in Tier 2 -->
-            <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2 greenDiv">
-                <div class="">General Docs</div>
-                <div ng-repeat="doc in date.docs">
-                    <div class="">{{doc.name}}</div>
+            <div ng-if="date.showSubtable" class="col-xs-3 col-sm-3 col-md-3 col-ld-3">
+                <div class="divHeightControl textAlign4">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6">General</div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6"><button class="btn-xs btn-success">Add</button></div>
+                </div>
+                <div ng-repeat="doc in date.docs" class="hoverDiv divHeightControl textAlign4">
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6">{{doc.name}}</div>
+                    <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6"><button class="btn-xs btn-danger">Delete</button></div>
                 </div>
             </div> <!-- Documents Card Stop in Tier 2 -->
             <!-- Tasks Card Repeat in Tier 2 -->
-            <div class="col-xs-10 col-sm-10 col-md-10 col-ld-10 blueDiv">
-                <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">Tasks</div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">OIC/NCOIC</div>
-                <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">Location</div><br>
-                <div ng-repeat="task in date.tasks">
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">{{task.name}}</div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">{{task.command}}</div>
-                    <div class="col-xs-4 col-sm-4 col-md-4 col-ld-4 control">{{task.location}}</div>
-                    <!-- Task Documents Card Repeat in Tier 2 -->
-                    <div class="">
-                        <div class="">Task Documents</div><br>
+            <div ng-if="date.showSubtable" class="col-xs-9 col-sm-9 col-md-9 col-ld-9">
+                <div class="divHeightControl textAlign4 greySeparator font10">
+                    <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3">Tasks</div>
+                    <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">Time</div>
+                    <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3">OIC/NCOIC</div>
+                    <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">Location</div>
+                    <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2"><button class="btn-xs btn-success" style="float: right">Add</button></div>
+                </div>
+                <div ng-repeat="task in date.tasks" class="greySeparator">
+                    <div ng-click="vm.toggleTaskSubform(task)" class="hoverDiv divHeightControl textAlign4 font10">
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3">{{task.name}}</div>
+                        <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">{{task.time}}</div>
+                        <div class="col-xs-3 col-sm-3 col-md-3 col-ld-3">{{task.command}}</div>
+                        <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2">{{task.location}}</div>
+                        <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2"><button ng-click="vm.toggleTaskSubform(task)" class="btn-xs btn-danger">Delete</button></div>
+                    </div>
+                    <!-- Task Documents Card Repeat in Tier 3 -->
+                    <div ng-if="task.showSubtable" class="">
                         <div class="">
-                            <div ng-repeat="doc in task.docs" class="control">
-                                <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6 control">{{doc.name}}</div>
-                                <div class="col-xs-6 col-sm-6 col-md-6 col-ld-6 control"><button>Delete</button></div>
+                            <div ng-repeat="doc in task.docs" class="divHeightControl textAlign2 font10">
+                                
+                                <div class="col-xs-10 col-sm-10 col-md-10 col-ld-10">&nbsp;&nbsp;&nbsp;&nbsp;{{doc.name}}</div>
+                                <div class="col-xs-2 col-sm-2 col-md-2 col-ld-2"><button class="btn-xs btn-danger">Delete</button></div>
                             </div>
                         </div>
                     </div> <!-- Task Documents Card End -->
                 </div> <!-- Tasks Repeat End -->
             </div> <!-- Tasks Card End -->
-            <p class="devDot">.</p>
+            <p ng-if="date.showSubtable" class="devDot">&nbsp;</p>
         </div>
     </div>
 </div>
