--- a/server/public/styles/style.css
+++ b/server/public/styles/style.css
@@ -148,7 +148,6 @@ body, html {
   padding-top: 1px;
 }
 
-
 .btn-xs {
   float: right;
   width: 50px;
@@ -158,6 +157,6 @@ div {
   overflow: hidden;
 }
 
-.font10 {
-  /* font-size: 10px */
+.shortWidth {
+  width: 75%;
 }
